# PilotGo-plugin-llmops

./: .gitignore  README.en.md  README.md
agent/: .gitignore  README.md  config.yaml  main.py  pyproject.toml
agent/app/agent_orchestration/: __init__.py  builder.py
agent/app/agent_orchestration/agents/ops_agent/: agent.py  agent.yaml  mcp.json  skill.json
agent/app/agent_orchestration/agents/qa_agent/: agent.py  agent.yaml  knowledge.json
agent/app/agent_orchestration/agents/template_agent/: agent.yaml
agent/app/common/: agent_builder_utils.py  errors.py  file_readers.py  logger.py
agent/app/common/config/: __init__.py  agent_config.py
agent/app/common/vectordb_adapter/: ragflow_vectordb.py
agent/app/domain/parameter/: ChatParam.py
agent/app/extensions/knowledge/: kb_health_check.py  knowledge.json
agent/app/extensions/mcp/: check_mcp_servers.py  mcp.json
agent/app/extensions/mcp/mcp_time-main/: README.md  main.py  pyproject.toml  test_mcp_server.py
agent/app/extensions/mcp/weather-main/: test_mcp_server.py
agent/app/extensions/skill/: skill.json  skill_checker.py
agent/app/extensions/skill/k8s-manage/: SKILL.md
agent/app/llm_adapter/: openai_adapter.py
agent/app/router/: __init__.py  agent.py
agent/app/service/: agent_service.py
agent/src/agents/: build.py  run.py
agent/src/config/: configs.py
agent/src/tools/: common.py  tool_confirm.py  tool_mcp.py
agent/src/workflows/: ai_trend.py
mcps/: base_os_mcp.py  main.py
mcps/os/: cmd_safety_guard.py  create_fix_pr.py  split_files.py  split_files__build_file_content.py  split_files__extract_imports_block.py  split_files__extract_logging_block.py  split_files__extract_tool_config_block.py  split_files__generate_init_files.py  split_files__get_func_source.py  split_files__main.py  split_files__split_file.py
mcps/os/app_mgmt/: apt_pkg_list.py  apt_src_cfg.py  binary_detail.py  flatpak_pkg_list.py  go_mod_info.py  ldd_detail.py  npm_pkg_list.py  pip_pkg_list.py  pkg_update_avail.py  rpm_pkg_detail.py  rpm_pkg_list.py  rpm_pkg_verify.py  runtime_ver.py
mcps/os/audit_logs/: app_custom_log.py  audit_entry_content.py  auditd_service.py  cron_log.py  dmesg_log.py  journalctl_log.py  journald_service.py  logfile_size.py  logrotate_cfg.py  rsyslog_service.py  secure_log.py  syslog_entry_content.py  syslog_service.py
mcps/os/hw_resources/: hw_bridge_switch.py  hw_drive_partition_tbl.py  hw_drive_physical.py  hw_firmware_detail.py  hw_gpu_detail.py  hw_memory_physical.py  (+3 more)
server/: .gitignore  client.yaml.templete  config.yaml.templete  go.mod  go.sum
server/config/: config.go
server/db/: db.go
server/http/: router.go  server.go
server/logger/: logger.go
server/scripts/: dev-env.sh  lib.sh  restart-services.sh  status-services.sh  stop-services.sh
server/service/: service.go
web/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.ts  index.html  package.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
(+381 files in other folders)
