[project]
name = "agno-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.10",
    "chromadb>=1.5.7",
    "dashscope>=1.25.17",
    "fastapi>=0.116.0",
    "geopy>=2.4.1",
    "mcp-server-time>=2026.1.26",
    "ollama>=0.6.1",
    "openai>=2.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "uvicorn>=0.35.0",
]
